full_error.txt
warning: unused import: `ConfigDelta`
  --> crates/dirtydata-core/src/actions.rs:17:30
   |
17 | use crate::types::{StableId, ConfigDelta};
   |                              ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `dirtydata-core` (lib) generated 1 warning (run `cargo fix --lib -p dirtydata-core` to apply 1 suggestion)
warning: unnecessary parentheses around assigned value
  --> crates/dirtydata-host/src/lib.rs:68:20
   |
68 |         let size = (input.len() as u32);
   |                    ^                  ^
   |
   = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
   |
68 -         let size = (input.len() as u32);
68 +         let size = input.len() as u32 ;
   |

warning: variable does not need to be mutable
  --> crates/dirtydata-host/src/lib.rs:61:13
   |
61 | ...   let mut stdout = self.child.stdout.as_mut().ok_or(HostError::Crash...
   |           ----^^^^^^
   |           |
   |           help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: `dirtydata-host` (lib) generated 2 warnings (run `cargo fix --lib -p dirtydata-host` to apply 2 suggestions)
warning: unused import: `HostError`
 --> crates/dirtydata-runtime/src/nodes.rs:2:34
  |
2 | use dirtydata_host::{PluginHost, HostError};
  |                                  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `dirtydata_core::ConfigSnapshot`
 --> crates/dirtydata-runtime/src/lib.rs:6:5
  |
6 | use dirtydata_core::ConfigSnapshot;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> crates/dirtydata-runtime/src/nodes.rs:972:13
    |
972 |         let mut u = vec![1.0; size];
    |             ----^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `config`
   --> crates/dirtydata-runtime/src/nodes.rs:981:70
    |
981 | ...utputs: &mut [[f32; 2]], config: &ConfigSnapshot, _ctx: &ProcessCont...
    |                             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_config`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: field `stages` is never read
   --> crates/dirtydata-runtime/src/nodes.rs:852:5
    |
851 | pub struct WavefolderNode {
    |            -------------- field in this struct
852 |     stages: usize,
    |     ^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `tau_samples` is never read
   --> crates/dirtydata-runtime/src/nodes.rs:921:5
    |
919 | pub struct MackeyGlassNode {
    |            --------------- field in this struct
920 |     history: VecDeque<f32>,
921 |     tau_samples: usize,
    |     ^^^^^^^^^^^

warning: `dirtydata-runtime` (lib) generated 6 warnings (run `cargo fix --lib -p dirtydata-runtime` to apply 4 suggestions)
    Checking dirtydata-gui v0.1.0 (/Users/yasuno/projects/DirtyData/crates/dirtydata-gui)
warning: variable does not need to be mutable
  --> crates/dirtydata-host/src/bin/dirtydata-plugin-worker.rs:12:9
   |
12 |     let mut buf = vec![0u8; 2048];
   |         ----^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `buf`
  --> crates/dirtydata-host/src/bin/dirtydata-plugin-worker.rs:12:9
   |
12 |     let mut buf = vec![0u8; 2048];
   |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_buf`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `dirtydata-runtime` (lib test) generated 6 warnings (6 duplicates)
warning: `dirtydata-host` (bin "dirtydata-plugin-worker" test) generated 2 warnings (run `cargo fix --bin "dirtydata-plugin-worker" -p dirtydata-host --tests` to apply 2 suggestions)
warning: `dirtydata-host` (bin "dirtydata-plugin-worker") generated 2 warnings (2 duplicates)
warning: `dirtydata-host` (lib test) generated 2 warnings (2 duplicates)
warning: unused variable: `rt`
  --> crates/dirtydata-core/src/constitution.rs:96:17
   |
96 |             let rt = proptest::test_runner::TestRunner::new(Default::def...
   |                 ^^ help: if this is intentional, prefix it with an underscore: `_rt`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: function `arb_node_kind` is never used
  --> crates/dirtydata-core/src/constitution.rs:23:8
   |
23 |     fn arb_node_kind() -> impl Strategy<Value = NodeKind> {
   |        ^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `arb_node` is never used
  --> crates/dirtydata-core/src/constitution.rs:33:8
   |
33 |     fn arb_node() -> impl Strategy<Value = Node> {
   |        ^^^^^^^^

warning: function `arb_config_value` is never used
  --> crates/dirtydata-core/src/constitution.rs:76:8
   |
76 |     fn arb_config_value() -> impl Strategy<Value = ConfigValue> {
   |        ^^^^^^^^^^^^^^^^

warning: `dirtydata-core` (lib test) generated 5 warnings (1 duplicate) (run `cargo fix --lib -p dirtydata-core --tests` to apply 1 suggestion)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `crossbeam_queue`
   --> crates/dirtydata-gui/src/editor.rs:373:87
    |
373 |                  shared.probe_buffers.insert(edge_source_node_id, std::sync::Arc::new(crossbeam_queue::ArrayQueue::new(128)));
    |                                                                                       ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `crossbeam_queue`
    |
    = help: if you wanted to use a crate named `crossbeam_queue`, use `cargo add crossbeam_queue` to add it to your `Cargo.toml`

warning: unused import: `UserPatchFile`
 --> crates/dirtydata-gui/src/lib.rs:6:37
  |
6 | use dirtydata_core::actions::{self, UserPatchFile};
  |                                     ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `dirtydata_runtime::nodes::MidiEvent`
 --> crates/dirtydata-gui/src/lib.rs:7:5
  |
7 | use dirtydata_runtime::nodes::MidiEvent;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `NodeVisuals`
 --> crates/dirtydata-gui/src/app.rs:1:31
  |
1 | use crate::{InteractionState, NodeVisuals, UiLayout, CommandPalette};
  |                               ^^^^^^^^^^^

warning: unused imports: `ConfidenceScore`, `DataType`, `ExecutionDomain`, `PortDirection`, and `PortRef`
 --> crates/dirtydata-gui/src/app.rs:7:29
  |
7 | use dirtydata_core::types::{ConfidenceScore, DataType, ExecutionDomain, PortDirection, PortRef, StableId};
  |                             ^^^^^^^^^^^^^^^  ^^^^^^^^  ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^

warning: unused imports: `Painter` and `Vec2`
 --> crates/dirtydata-gui/src/app.rs:8:27
  |
8 | use egui::{vec2, Color32, Painter, Pos2, Rect, Stroke, Vec2};
  |                           ^^^^^^^                      ^^^^

warning: unused imports: `Rounding` and `Shadow`
 --> crates/dirtydata-gui/src/editor.rs:1:62
  |
1 | use egui::{vec2, Color32, Painter, Pos2, Rect, Stroke, Vec2, Rounding, Shadow};
  |                                                              ^^^^^^^^  ^^^^^^

warning: unused import: `ExecutionDomain`
 --> crates/dirtydata-gui/src/editor.rs:3:63
  |
3 | use dirtydata_core::types::{StableId, PortRef, PortDirection, ExecutionDomain};
  |                                                               ^^^^^^^^^^^^^^^

warning: unused import: `HashMap`
 --> crates/dirtydata-gui/src/editor.rs:7:24
  |
7 | use std::collections::{HashMap, HashSet};
  |                        ^^^^^^^

warning: use of deprecated method `egui::Response::drag_released`: Renamed 'drag_stopped'
   --> crates/dirtydata-gui/src/editor.rs:445:21
    |
445 |         if response.drag_released() {
    |                     ^^^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: unused variable: `graph`
   --> crates/dirtydata-gui/src/editor.rs:411:53
    |
411 |     fn handle_marquee(&mut self, ui: &mut egui::Ui, graph: &Graph, layout: &UiLayout, interaction: &mut InteractionState) {
    |                                                     ^^^^^ help: if this is intentional, prefix it with an underscore: `_graph`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0433`.
warning: `dirtydata-gui` (lib) generated 10 warnings (3 duplicates)
error: could not compile `dirtydata-gui` (lib) due to 1 previous error; 10 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `dirtydata-gui` (lib test) generated 10 warnings (7 duplicates)
error: could not compile `dirtydata-gui` (lib test) due to 1 previous error; 10 warnings emitted
